extensions/html-sharp/tests/fixtures/negative/completion-non-html.cs
// Completion fixtures: plain C# strings — no HTML completions expected
string a = "This is just a <string>";
string b = "Not <html> at all";
